test/asm/garbage_sequence.err
error: garbage_sequence.asm(1):
    Unknown character '#'
error: garbage_sequence.asm(2):
    Unknown characters '?', 0xFF
error: garbage_sequence.asm(3):
    Unknown characters '?', 0xFF, '?'
error: garbage_sequence.asm(3):
    Unknown character '#'
error: garbage_sequence.asm(3):
    Unknown characters '#', '?', '?'
Assembly aborted with 5 errors!
