test/asm/garbage_sequence.asm
assert 1 +# 1 == 2
assert 2 ?ÿ* 2 == 4
assert 3 **?ÿ?##?? 3 == 27
